# oe-lifecycle-manager

./: AGENTS.md  README.md  pyproject.toml
configs/: lifecycle.yaml  risk_rules.yaml  upgrade_paths.yaml
docs/: actor-framework.md  architecture-design.md  plugin-framework.md  state-manager.md  workflow-engine.md
src/oe_lifecycle_manager/: __init__.py  main.py
src/oe_lifecycle_manager/adapters/agent/: __init__.py  server.py
src/oe_lifecycle_manager/adapters/cli/: commands.py
src/oe_lifecycle_manager/adapters/rest/: api.py
src/oe_lifecycle_manager/application/: actor_framework.py  inventory_service.py  plugin_framework.py  precheck_service.py  report_service.py  risk_service.py  rollback_service.py  state_manager.py  upgrade_service.py  workflow_engine.py  workflow_service.py
src/oe_lifecycle_manager/domain/: common.py  host.py  lifecycle.py  plugin.py  risk.py  rollback.py  upgrade.py
src/oe_lifecycle_manager/infrastructure/database/: sqlite.py
src/oe_lifecycle_manager/infrastructure/lvm/: __init__.py  client.py
src/oe_lifecycle_manager/infrastructure/repo/: __init__.py  local_repo.py
src/oe_lifecycle_manager/infrastructure/report/: __init__.py  html_renderer.py
src/oe_lifecycle_manager/infrastructure/rpm/: __init__.py  client.py
src/oe_lifecycle_manager/infrastructure/systemd/: __init__.py  client.py
src/oe_lifecycle_manager/plugins/: __init__.py
src/oe_lifecycle_manager/plugins/containerd/: __init__.py  plugin.py
tests/unit/: test_actor_framework.py  test_plugin_framework.py  test_state_manager.py  test_workflow_engine.py
(+20 files in other folders)
